@@ -475,3 +475,11 @@ tools/install-sh:
 
    Copyright (C) 1994 X Consortium
 
+mt/stat-time.m4
+
+# Copyright (C) 1998-1999, 2001, 2003, 2005-2007, 2009-2011 Free Software
+# Foundation, Inc.
+
+# This file is free software; the Free Software Foundation
+# gives unlimited permission to copy and/or distribute it,
+# with or without modifications, as long as this notice is preserved.
